# kedb

./: MANIFEST.in  README.md  README.rst  requirements.txt  setup.cfg  setup.py
debian/: changelog  control  dirs  install  postinst  postrm  templates
doc/: api.md  conf.py  index.rst  resources.rst
kedb/: __init__.py  admin.py  models.py  serialisers.py  settings.py  urls.py  utils.py  views.py
kedb/migrations/: 0001_initial.py  0002_auto__add_workaround.py  0003_auto__add_field_knownerror_ownership.py  0004_auto__add_field_workaround_engine__add_field_workaround_action.py
kedb/south_migrations/: 0001_initial.py
requirements/: common.txt  default.txt
